applied Rosa's comments on introduction

--- a/References/references.bib
+++ b/References/references.bib
@@ -1158,6 +1158,26 @@ number={7},
 pages={2074-2087}, 
 }
 
+@inproceedings{Chronaki:ISC, 
+author={K. Chronaki  and M. Casas and M. Moretó and J. Bosch and R. M. Badia}, 
+booktitle={International Supercomputing Conference (ISC)}, 
+title={TaskGenX: A Hardware-Software Proposal for Accelerating Task Parallelism}, 
+year={2018}, 
+}
+
+@INPROCEEDINGS{CATA, 
+author={E. Castillo and M. Moreto and M. Casas and L. Alvarez and E. Vallejo and K. Chronaki and R. Badia and J. L. Bosque and R. Beivide and E. Ayguade and J. Labarta and M. Valero}, 
+booktitle={2016 IEEE International Parallel and Distributed Processing Symposium (IPDPS)}, 
+title={CATA: Criticality Aware Task Acceleration for Multicore Processors}, 
+year={2016}, 
+volume={}, 
+number={}, 
+pages={413-422}, 
+keywords={multiprocessing systems;scheduling;CATA mechanism;EDP;criticality aware task acceleration;criticality aware task schedulers;energy-delay product;hardware reconfigurations;hardware structures;lock contention;manycore systems;multicore processors;power optimization opportunities;reconfiguration overhead;simulated 32-core system;software-only solution;static binding problems;task-based programming models;Acceleration;Cats;Hardware;Multicore processing;Program processors;Programming;Runtime;criticality;data-flow;heterogeneous}, 
+doi={10.1109/IPDPS.2016.49}, 
+ISSN={1530-2075}, 
+month={May},}
+
 @article{AMC_survey,
 author = {Mittal, Sparsh},
 year = {2016},
@@ -1167,3 +1187,14 @@ title = {A Survey Of Techniques for Architecting and Managing Asymmetric Multico
 volume = {48},
 booktitle = {ACM Computing Surveys}
 }
+
+@INPROCEEDINGS{PACT_poster, 
+author={K. Chronaki and M. Moretó and M. Casas and A. Rico and R. M. Badia and E. Ayguadé and J. Labarta and M. Valero}, 
+booktitle={PACT}, 
+title={POSTER: Exploiting asymmetric multi-core processors with flexible system software}, 
+year={2016}, 
+volume={}, 
+number={}, 
+pages={415-417}, 
+ISSN={}, 
+month={Sept},}
