--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,4 +1,5 @@
 \chapter{Conclusions}
+\label{chapter.conclusions}
 This PhD thesis incorporated flexible software techniques on the runtime system level in order to effectively utilize asymmetric systems.
 The main contributions of the thesis rely on the efficient exploitation of future asymmetric multi-core systems in terms of performance as well as on conceiving future asymmetric architectures that fit the needs of high performance computing.
 \kc{TODO, ellaborate on:}
